// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MalcolmMiddlePanel renders a container only if the mainAttribute is not layout 1`] = `
<div
  className="MiddlePanelContainer-container-1"
/>
`;

exports[`MalcolmMiddlePanel renders correctly 1`] = `
<div
  className="MiddlePanelContainer-container-1"
>
  <div
    className="MiddlePanelContainer-layoutArea-2"
  >
    <Layout
      blocks={Array []}
    />
  </div>
</div>
`;
